equation/canopy graph overlap fix for ie7
git-svn-id: http://svn.ccnmtl.columbia.edu/blackrock/trunk@14333 1f418930-7ff8-0310-b8ad-c653122473bc

--- a/respiration/media/css/style_ie7.css
+++ b/respiration/media/css/style_ie7.css
@@ -27,3 +27,8 @@ fieldset
 {
 	padding: 5px;
 }
+
+div#equation
+{
+	top: 260px;
+}
